# pytealet

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  wip.md
.github/: copilot-instructions.md
.github/skills/uv/: SKILL.md
.github/workflows/: ci.yml  release-publish.yml  tealet-greenlet-ci.yml  tealet-greenlet-release-publish.yml  tealetio-ci.yml  tealetio-release-publish.yml  uring-api-ci.yml  uring-api-release-publish.yml
.grok/skills/uv/: SKILL.md
docs/: ARCHITECTURE.md  ASYNCIO_COEXISTENCE.md  C_API.md  C_API_EXPLORATION.md  C_API_PARITY_PLAN.md  GREENLET_COMPATIBILITY_PLAN.md  ISSUES.md  PYTHON_API.md  SCHEDULER_RUNTIME_API_SPEC.md  STACKMAN_CROSS_COMPILE_FINDINGS.md  TEALETIO_SPLIT_FEASIBILITY.md  pytealet_analysis.md  thread-hardening-session-notes.md
scripts/: fast_build.sh
src/: _tealet.pyi  greenlet_legacy.py  tealet_examples.py
src/_tealet/: README.md  frame_info.c  frame_info.h  pytealet.c  pytealet.h  pytealet_build_config.h  pytealet_capi.h  pytealet_capi_client.c  pytealet_common.h  pytealet_lineage.c  pytealet_lineage.h  pytealet_module.c  pytealet_module.h  pytealet_runtime.h  pytealet_throw.c  pytealet_throw.h  tstate_state.c  tstate_state.h
src/_tealet/libtealet/: Makefile
src/_tealet/libtealet/lib/win_arm64/: tealet.lib  tealet_static.lib
src/_tealet/libtealet/lib/win_x64/: tealet.lib  tealet_static.lib
src/_tealet/libtealet/lib/win_x86/: tealet.lib  tealet_static.lib
src/_tealet/libtealet/src/: tealet.c  tealet.h
src/_tealet/libtealet/stackman/tools/: strip-lib.py
src/_tealet/libtealet/tealet/: tealet.h
src/capi_client/: tealet_capi_client.c
src/greenlet/: __init__.py  _greenlet.py
src/tealet/: __init__.py  asyncio.py  compat.py  greenlet.py  greenlet_legacy.py  locks.py  runner.py  runtime.py  scheduler.py  selector.py  simple_scheduler.py  tasks.py
src/tealet/greenlet/: __init__.py  _greenlet.py
src/tealet/include/: pytealet_capi.h
tests/: README.md  __init__.py  _tealet_test_helpers.py  conftest.py  test_examples.py  test_greenlet.py  test_greenlet_legacy.py  test_public_capi_headers.py  test_runtime_runner.py  test_scheduler.py  test_scheduler_crash_repros.py  test_tealet.py  test_tealet_capi_client.py  test_tealet_context.py  test_tealet_frames_random.py  test_tealet_runtime.py  test_tealet_switching.py  test_tealet_threading.py
tests/compat_greenlet/: README.md  __init__.py  conftest.py  test_gc.py  test_greenlet.py  test_leaks.py  test_tracing.py
