[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tealet"
version = "0.1.0"
description = "Tealet - A greenlet-like library using tealets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Kristján Valur Jónsson", email = "sweskman@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# C extension configuration (to be configured later)
# The C extension source is located at src/_tealet/_tealet.c
# with dependencies in src/_tealet/libtealet/
# [tool.setuptools.ext-modules]
# [[tool.setuptools.ext-modules]]
# name = "_tealet"
# sources = ["src/_tealet/_tealet.c"]
# include_dirs = ["src/_tealet/libtealet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
