[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tealet"
version = "0.1.0rc2"
description = "Tealet - A greenlet-like library using tealets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Kristján Valur Jónsson", email = "sweskman@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tealet = ["include/*.h", "py.typed"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 120
extend-exclude = [
    "build/**",
    "packages/**/tests/**",
    "src/_tealet/libtealet/**",
    "tests/**",
]

[tool.ty.src]
include = [
    "src",
    "packages/tealetio/src",
    "packages/tealet-greenlet/src",
]
exclude = [
    "tests/**",
    "packages/**/tests/**",
]

[tool.ty.environment]
root = [
    "src",
    "packages/tealetio/src",
    "packages/tealet-greenlet/src",
]

[tool.ty.terminal]
output-format = "concise"

[tool.ruff.lint.per-file-ignores]
"src/tealet/__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]
